2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>
	* GNUmakefile: Add DKProperty.m and DKPropertyMethod.m to the
	build.
	* Source/DKArgument.h: Tiny documentation clarification.
	* Source/DKMethod.h: Expose some methods needed by the
	subclasses.
	* Source/DKMethod.m: Introduce a slightly more flexible way of
	comparing D-Bus and Obj-C method signatures. 
	* Source/DKProperty.h: Remove redundant attribute field.
	* Source/DKProperty.m: Implement DKProperty to hold
	introspection data about properties.
	* Source/DKPropertyMethod.h: Complete header.
	* Source/DKPropertyMethod.m: Slight cleanup for the accessor,
	implement the mutator method.

	Even more work on properties.

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m: Fix typo. Protect against potential
	memory leak when unmarshalling a variant type argument raises an
	exception.
	* Source/DKProperty.h: Changes to the class layout, added some
	method declarations.
	* Source/DKPropertyMethod.h
	* Source/DKPropertyMethod.m:
	Began stubbing out support for property accessor methods.

	Further work on properties. (Not yet connected to the build)

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/GNUmakefile: Fix copy-and-paste error.

2010-09-11 Niels Grewe <niels.grewe@halbordnung.de>

	* ChangeLog: Generate from `svn log'.
	* Source/DKSignal.h: Documentation fix.
	* Source/DKProperty.h: Add header.

	Begin conceptualizing property support. Add ChangeLog.

2010-09-10  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: warn if gnustep-make not found

2010-09-09  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProxy.m: Fix bug reported by Philippe Roussel. (Note to self:
	Unit tests are only useful if you actually run them…)

2010-09-05  Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/GNUmakefile
	* Tests/GNUmakefile.postamble
	* Tests/TestDKArgument.m
	* Tests/TestDKMethodCall.m
	* Tests/TestDKPort.m
	* Tests/TestDKProxy.m: